# sap-hana-to-snowflake-migration

./: .env  .gitignore  Makefile  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
app/: __main__.py  main.py  status_manager.py
app/config/: __init__.py  env_loader.py  redis_config.py
app/routers/: __init__.py  migrate_saphana_to_snowflake.py
app/schemas/: __init__.py  response_models.py
app/services/: __init__.py  migration_service.py
app/utils/: __init__.py  logger.py  util.py
